@@ -49,6 +49,8 @@ let Interpreter = class {
 			case "*": result = left.value * right.value; break;
 			case "/": result = left.value / right.value; break;
 			case "%": result = left.value % right.value; break;
+			case "^": result = left.value ^ right.value; break;
+			case "**": result = left.value ** right.value; break;
 		}
 
 		// switch (typeof(result)) {
