@@ -1,1 +1,1 @@
-10 + 5
+10 + 5 ^ 2
